[package]
name = "tcp-console"
version = "0.1.0"
edition = "2021"

[[example]]
name = "console"
path = "examples/console.rs"

[dependencies]
async-trait = "0.1.83"
bytes = { version = "1.9.0", features = ["serde"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
tracing = "0.1.41"
bcs = "0.1.6"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

