[package]
name = "tcp-console"
version = "0.1.1"
edition = "2021"
authors = [
    "Victor Ermolaev <victorermolaev@gmail.com>",
]
repository = "https://github.com/vnermolaev/tcp-console"
documentation = "https://docs.rs/tcp-console/"
license = "MIT OR Apache-2.0"
keywords = ["tcp", "console"]
categories = ["network-programming", "command-line-utilities"]
description = "A TCP console to send command to running applications"
readme = "README.md"

[[example]]
name = "console"
path = "examples/console.rs"

[dependencies]
async-trait = "0.1.83"
bytes = { version = "1.9.0", features = ["serde"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["codec"] }
futures-util = { version = "0.3.31", features = ["sink"] }
tracing = "0.1.41"
bcs = "0.1.6"
serde = { version = "1.0.215", features = ["derive"] }
anyhow = "1.0.93"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

